ńosto ja talletus toimii mutta errorhandlingissä bugeja
