# backend/swagger/api_docs/account_docs.yaml
@@ -155,3 +155,67 @@ paths:
           description: Account not found
         '500':
           description: Server error
+  /api/account/{idaccount}/withdraw:
+    patch:
+      security:
+      - bearerAuth: []
+      tags:
+        - withdraw & deposit prosedures
+      summary: withdraw money from account
+      parameters:
+        - in: path
+          name: idaccount
+          required: true
+          schema:
+            type: string
+          description: The account ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                withdrawAmount:
+                  type: number
+                description:
+                  type: string
+      responses:
+        '200':
+          description: withdraw completed
+        '404':
+          description: Account not found
+        '500':
+          description: Server error
+  /api/account/{idaccount}/deposit:
+    patch:
+      security:
+      - bearerAuth: []
+      tags:
+        - withdraw & deposit prosedures
+      summary: deposit money to account
+      parameters:
+        - in: path
+          name: idaccount
+          required: true
+          schema:
+            type: string
+          description: The account ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                depositAmount:
+                  type: number
+                description:
+                  type: string
+      responses:
+        '200':
+          description: deposit completed
+        '404':
+          description: Account not found
+        '500':
+          description: Server error
